changed some links and remove catalogs

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<h1>Blank tamplate</h1>
-	//= blocks/block.html
+	//= components/block.html
 	<script src="./script/script.js"></script>
 </body>
 </html>
