--- a/#src/index.html
+++ b/#src/index.html
@@ -4,12 +4,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/style.min.css">
 	<title>Blank tamplate</title>
 </head>
 <body>
 	<h1>Blank tamplate</h1>
-	@import "block.html"
-	<script src="./script/script.js"></script>
+		@@include('components/_header.html')
+		<main>
+			main 
+			<img width="200px" height="auto" src="images/cheshirecat.png" alt="cat">
+		</main>
+	<script src="./script/script.min.js"></script>
+	<div></div>
 </body>
 </html>
