- добавил отображение сетки

--- a/#src/index.html
+++ b/#src/index.html
@@ -12,24 +12,51 @@
 
 <body>
 	<div class="wrap">
-		//= blocks/header
-		<main>
-			<div class="container">
-				<h2>main</h2>
+		<div class="container">
+			<div class="wraper">
+				<div class="content">
+					content
+				</div>
+				<div class="content2">
+					content
+				</div>
+				<div class="content3">
+					content
+				</div>
+
+				<div class="content">
+					content
+				</div>
+				<div class="content3">
+					content
+				</div>
+				<div class="content2">
+					content
+				</div>
 			</div>
-		</main>
-		//= blocks/footer
+
+		</div>
+
+		<div class=" container">
+			//= blocks/header
+			<main>
+				<h2>main</h2>
+			</main>
+			//= blocks/footer
+		</div>
 	</div>
 
 
-	<h1>Blank tamplate</h1>
+	<!-- <h1>Blank tamplate</h1>
 	//= blocks/demo.html
 	<main>
 		main
 		<img width="200px" height="auto" src="images/image.jpg" alt="image">
-	</main>
+	</main> -->
 	<script src="./script/script.min.js"></script>
-	<div></div>
+
+
+
 </body>
 
 </html>
