- complate  demo-grid

--- a/#src/blocks/demo.html
+++ b/#src/blocks/demo.html
@@ -1,3 +1,7 @@
-<div>
-	<h3>Insert of the block works</h3>
-</div>
+<div class="wrapper">
+	<div style="width: 100%; margin-bottom: 50px" >
+		<h3>Insert of the block works</h3>
+	</div>
+	<img class="image" src="images/image.jpg" alt="image">
+
+</div	
