--- a/#src/index.html
+++ b/#src/index.html
@@ -12,48 +12,20 @@
 
 <body>
 	<div class="wrap">
-		<div class="container">
-			<div class="wraper">
-				<div class="content">
-					content
-				</div>
-				<div class="content2">
-					content
-				</div>
-				<div class="content3">
-					content
-				</div>
+		//= blocks/griid-content-demo
+		//= blocks/header
 
-				<div class="content">
-					content
-				</div>
-				<div class="content3">
-					content
-				</div>
-				<div class="content2">
-					content
-				</div>
+		<main>
+			<div class="container">
+				<h2>main</h2>
+				//= blocks/demo.html
 			</div>
+		</main>
+		//= blocks/footer
 
-		</div>
 
-		<div class=" container">
-			//= blocks/header
-			<main>
-				<div class="container">
-					<h2>main</h2>
-					//= blocks/demo.html
-					<img width="200px" height="auto" src="images/image.jpg" alt="image">
-				</div>
-			</main>
-		</div>
-			//= blocks/footer
 	</div>
-
-
 	<script src="./script/script.min.js"></script>
-
-
 </body>
 
 </html>
