--- a/#src/blocks/demo.html
+++ b/#src/blocks/demo.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapperContent">
 	<div style="width: 100%; margin-bottom: 50px" >
 		<h3>Insert of the block works</h3>
 	</div>
