--- a/#src/index.html
+++ b/#src/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport"
+		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="./css/style.min.css">
+
+	// blocks/_link-heads
+
 	<title>Tamplate</title>
 </head>
 
 <body>
 	<div class="wrap">
-		//= blocks/grid-content-demo
-		//= blocks/header
+		// blocks/_grid-content-demo
+		// blocks/_header
 
 		<main>
 			<div class="container">
 				<h2>main</h2>
-				//= blocks/demo.html
+				// blocks/_demo.html
 			</div>
 		</main>
-		//= blocks/footer
+		// blocks/_footer
 
 
 	</div>
-	<script src="./script/script.min.js"></script>
+	// blocks/_scripts
+
 </body>
 
 </html>
