--- a/#src/blocks/_scripts.html
+++ b/#src/blocks/_scripts.html
@@ -1,4 +1,4 @@
-	---jquery---
+	<!-- ---jquery--- -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 <!-- pollifil css-nar -->
