--- a/#src/index.html
+++ b/#src/index.html
@@ -7,27 +7,27 @@
 		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-	// blocks/_link-heads
+	//= blocks/_link-heads
 
 	<title>Tamplate</title>
 </head>
 
 <body>
 	<div class="wrap">
-		// blocks/_grid-content-demo
-		// blocks/_header
+		//= blocks/_grid-content-demo
+		//= blocks/_header
 
 		<main>
 			<div class="container">
 				<h2>main</h2>
-				// blocks/_demo.html
+				//= blocks/_demo.html
 			</div>
 		</main>
-		// blocks/_footer
+		//= blocks/_footer
 
 
 	</div>
-	// blocks/_scripts
+	//= blocks/_scripts
 
 </body>
 
