update config:  -fixed bur from image&svg  - update sass loader config  - update bable config (added cach)  - edit path for img for production version  - deleted needless modules

--- a/#src/blocks/_scripts.html
+++ b/#src/blocks/_scripts.html
@@ -1,15 +1,6 @@
 	<!-- ---jquery--- -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<!-- pollifil css-nar -->
-	<!-- <script>window.MSInputMethodContext && document.documentMode && document.write('<script src="https://cdn.jsdelivr.net/gh/nuxodin/ie11CustomProperties@4.1.0/ie11CustomProperties.min.js"><\x2fscript>');</script> -->
-
-
-	<!-- ---gsap--- -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.js"></script>
-
-
 	<!-- ---my script--- -->
-	<script src="./script/script.min.js"></script>
+	<script src="./script/main.min.js"></script>
 
